# json-bin

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/lib/: auth.rs  schema.rs
src/routes/: add_user.rs  get_key.rs  new_key.rs
src/routes/api/: add_json.rs  get_json.rs  hello.rs
