[package]
name = "json-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-web-lab = "0.20.2"
clippy = "0.0.302"
mongodb = "2.8.2"
serde = "1.0.198"
serde_json = "1.0.116"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]
